--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Nike Store</title>
+    <title>Portable Gaming Store</title>
 </head>
 
 <body>
@@ -28,10 +28,10 @@
             </div>
         </div>
         <div class="navBottom">
-            <h3 class="menuItem">AIR FORCE</h3>
-            <h3 class="menuItem">JORDAN</h3>
-            <h3 class="menuItem">BLAZER</h3>
-            <h3 class="menuItem">CRATER</h3>
+            <h3 class="menuItem">NINTENDO SWITCH</h3>
+            <h3 class="menuItem">RAZER KISHI</h3>
+            <h3 class="menuItem">BACKBONE</h3>
+            <h3 class="menuItem">STEAM DECK</h3>
             <h3 class="menuItem">HIPPIE</h3>
         </div>
     </nav>
@@ -40,8 +40,8 @@
             <div class="sliderItem">
                 <img src="./img/air.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">AIR FORCE</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">$119</h2>
+                <h1 class="sliderTitle">NINTENDO SWITCH</br> NEW</br> OLED</h1>
+                <h2 class="sliderPrice">£350</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -49,8 +49,8 @@
             <div class="sliderItem">
                 <img src="./img/jordan.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">AIR JORDAN</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">$149</h2>
+                <h1 class="sliderTitle">RAZER KISHI</br> NEW</br> IOS</h1>
+                <h2 class="sliderPrice">£89</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -58,8 +58,8 @@
             <div class="sliderItem">
                 <img src="./img/blazer.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">BLAZER</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">$109</h2>
+                <h1 class="sliderTitle">BACKBONE</br> NEW</br> IOS</h1>
+                <h2 class="sliderPrice">£99</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -67,8 +67,8 @@
             <div class="sliderItem">
                 <img src="./img/crater.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">CRATER</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">$129</h2>
+                <h1 class="sliderTitle">STEAM DECK</br> NEW</br> 250GB</h1>
+                <h2 class="sliderPrice">£400</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
