--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <img src="./img/air.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">NINTENDO SWITCH</br> NEW</br> OLED</h1>
-                <h2 class="sliderPrice">£350</h2>
+                <h2 class="sliderPrice">£300</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -111,8 +111,8 @@
     <div class="product" id="product">
         <img src="./img/air.png" alt="" class="productImg">
         <div class="productDetails">
-            <h1 class="productTitle">AIR FORCE</h1>
-            <h2 class="productPrice">$199</h2>
+            <h1 class="productTitle">NINTENDO SWITCH OLED</h1>
+            <h2 class="productPrice">£300</h2>
             <p class="productDesc">Lorem ipsum dolor sit amet consectetur impal adipisicing elit. Alias assumenda
                 dolorum
                 doloremque sapiente aliquid aperiam.</p>
@@ -210,10 +210,10 @@
             <div class="footerMenu">
                 <h1 class="fMenuTitle">Products</h1>
                 <ul class="fList">
-                    <li class="fListItem">Air Force</li>
-                    <li class="fListItem">Air Jordan</li>
-                    <li class="fListItem">Blazer</li>
-                    <li class="fListItem">Crater</li>
+                    <li class="fListItem">Nintendo Switch</li>
+                    <li class="fListItem">Razer Kishi</li>
+                    <li class="fListItem">Backbone</li>
+                    <li class="fListItem">Steam Deck</li>
                     <li class="fListItem">Hippie</li>
                 </ul>
             </div>
