--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav id="nav">
         <div class="navTop">
             <div class="navItem">
-                <img src="./img/sneakers.png" alt="">
+                <span class="limitedOffer">PORTABLE CONSOLE</span>
             </div>
             <div class="navItem">
                 <div class="search">
