--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h3 class="menuItem">RAZER KISHI</h3>
             <h3 class="menuItem">BACKBONE</h3>
             <h3 class="menuItem">STEAM DECK</h3>
-            <h3 class="menuItem">HIPPIE</h3>
+            <h3 class="menuItem">PS VITA</h3>
         </div>
     </nav>
     <div class="slider">
@@ -76,7 +76,7 @@
             <div class="sliderItem">
                 <img src="./img/hippie.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">HIPPIE</br> NEW</br> SEASON</h1>
+                <h1 class="sliderTitle">PS VITA</br> NEW</br> SEASON</h1>
                 <h2 class="sliderPrice">$99</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
