--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <img src="./img/hippie.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">PS VITA</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">$99</h2>
+                <h2 class="sliderPrice">£120</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
                 </a>
@@ -236,7 +236,7 @@
                 </div>
             </div>
             <div class="footerRightMenu">
-                <span class="copyright">@Lama Dev. All rights reserved. 2022.</span>
+                <span class="copyright"></span>
             </div>
         </div>
     </footer>
