--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="navItem">
-                <span class="limitedOffer">Limited Offer!</span>
+                <span class="limitedOffer">Sharthak Rai</span>
             </div>
         </div>
         <div class="navBottom">
@@ -40,7 +40,7 @@
             <div class="sliderItem">
                 <img src="./img/air.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">NINTENDO SWITCH</br> NEW</br> OLED</h1>
+                <h1 class="sliderTitle">NINTENDO SWITCH</br> OLED</h1>
                 <h2 class="sliderPrice">£300</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
@@ -49,7 +49,7 @@
             <div class="sliderItem">
                 <img src="./img/jordan.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">RAZER KISHI</br> NEW</br> IOS</h1>
+                <h1 class="sliderTitle">RAZER KISHI</br> IOS</h1>
                 <h2 class="sliderPrice">£89</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
@@ -58,7 +58,7 @@
             <div class="sliderItem">
                 <img src="./img/blazer.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">BACKBONE</br> NEW</br> IOS</h1>
+                <h1 class="sliderTitle">BACKBONE</br> IOS</h1>
                 <h2 class="sliderPrice">£99</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
@@ -67,7 +67,7 @@
             <div class="sliderItem">
                 <img src="./img/crater.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">STEAM DECK</br> NEW</br> 250GB</h1>
+                <h1 class="sliderTitle">STEAM DECK</br> 250GB</h1>
                 <h2 class="sliderPrice">£400</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
@@ -76,7 +76,7 @@
             <div class="sliderItem">
                 <img src="./img/hippie.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">PS VITA</br> NEW</br> SEASON</h1>
+                <h1 class="sliderTitle">PS VITA</br></h1>
                 <h2 class="sliderPrice">£120</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
