--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
     </div>
 
-    <div class="product" id="product">
+    <!-- <div class="product" id="product">
         <img src="./img/air.png" alt="" class="productImg">
         <div class="productDetails">
             <h1 class="productTitle">NINTENDO SWITCH OLED</h1>
@@ -149,27 +149,27 @@
             <button class="payButton">Checkout!</button>
             <span class="close">X</span>
         </div>
-    </div>
+    </div> -->
     <div class="gallery">
         <div class="galleryItem">
             <h1 class="galleryTitle">Be Yourself!</h1>
-            <img src="https://images.pexels.com/photos/9295809/pexels-photo-9295809.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+            <img src="https://images.unsplash.com/photo-1585427795543-33cf23ea2853?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80ech"
                 alt="" class="galleryImg">
         </div>
         <div class="galleryItem">
-            <img src="https://images.pexels.com/photos/1040427/pexels-photo-1040427.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+            <img src="https://images.unsplash.com/photo-1531297484001-80022131f5a1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1420&q=80"
                 alt="" class="galleryImg">
             <h1 class="galleryTitle">This is the First Day of Your New Life</h1>
         </div>
         <div class="galleryItem">
             <h1 class="galleryTitle">Just Do it!</h1>
-            <img src="https://images.pexels.com/photos/7856965/pexels-photo-7856965.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+            <img src="https://images.unsplash.com/photo-1632633726419-3e5e7d74ca61?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
                 alt="" class="galleryImg">
         </div>
     </div>
     <div class="newSeason">
         <div class="nsItem">
-            <img src="https://images.pexels.com/photos/4753986/pexels-photo-4753986.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+            <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
                 alt="" class="nsImg">
         </div>
         <div class="nsItem">
@@ -214,7 +214,7 @@
                     <li class="fListItem">Razer Kishi</li>
                     <li class="fListItem">Backbone</li>
                     <li class="fListItem">Steam Deck</li>
-                    <li class="fListItem">Hippie</li>
+                    <li class="fListItem">PS Vita</li>
                 </ul>
             </div>
         </div>
