--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="sliderItem">
                 <img src="./img/air.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">NINTENDO SWITCH</br> OLED</h1>
+                <h1 class="sliderTitle">NINTENDO</br>SWITCH</h1>
                 <h2 class="sliderPrice">£300</h2>
                 <a href="#product">
                     <button class="buyButton">BUY NOW!</button>
@@ -108,61 +108,19 @@
         </div>
     </div>
 
-    <!-- <div class="product" id="product">
-        <img src="./img/air.png" alt="" class="productImg">
-        <div class="productDetails">
-            <h1 class="productTitle">NINTENDO SWITCH OLED</h1>
-            <h2 class="productPrice">£300</h2>
-            <p class="productDesc">Lorem ipsum dolor sit amet consectetur impal adipisicing elit. Alias assumenda
-                dolorum
-                doloremque sapiente aliquid aperiam.</p>
-            <div class="colors">
-                <div class="color"></div>
-                <div class="color"></div>
-            </div>
-            <div class="sizes">
-                <div class="size">42</div>
-                <div class="size">43</div>
-                <div class="size">44</div>
-            </div>
-            <button class="productButton">BUY NOW!</button>
-        </div>
-        <div class="payment">
-            <h1 class="payTitle">Personal Information</h1>
-            <label>Name and Surname</label>
-            <input type="text" placeholder="John Doe" class="payInput">
-            <label>Phone Number</label>
-            <input type="text" placeholder="+1 234 5678" class="payInput">
-            <label>Address</label>
-            <input type="text" placeholder="Elton St 21 22-145" class="payInput">
-            <h1 class="payTitle">Card Information</h1>
-            <div class="cardIcons">
-                <img src="./img/visa.png" width="40" alt="" class="cardIcon">
-                <img src="./img/master.png" alt="" width="40" class="cardIcon">
-            </div>
-            <input type="password" class="payInput" placeholder="Card Number">
-            <div class="cardInfo">
-                <input type="text" placeholder="mm" class="payInput sm">
-                <input type="text" placeholder="yyyy" class="payInput sm">
-                <input type="text" placeholder="cvv" class="payInput sm">
-            </div>
-            <button class="payButton">Checkout!</button>
-            <span class="close">X</span>
-        </div>
-    </div> -->
     <div class="gallery">
         <div class="galleryItem">
-            <h1 class="galleryTitle">Be Yourself!</h1>
+            <h1 class="galleryTitle">Technology!</h1>
             <img src="https://images.unsplash.com/photo-1585427795543-33cf23ea2853?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80ech"
                 alt="" class="galleryImg">
         </div>
         <div class="galleryItem">
             <img src="https://images.unsplash.com/photo-1531297484001-80022131f5a1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1420&q=80"
                 alt="" class="galleryImg">
-            <h1 class="galleryTitle">This is the First Day of Your New Life</h1>
+            <h1 class="galleryTitle">Disruptive</h1>
         </div>
         <div class="galleryItem">
-            <h1 class="galleryTitle">Just Do it!</h1>
+            <h1 class="galleryTitle">Cutting Edge</h1>
             <img src="https://images.unsplash.com/photo-1632633726419-3e5e7d74ca61?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
                 alt="" class="galleryImg">
         </div>
@@ -173,15 +131,15 @@
                 alt="" class="nsImg">
         </div>
         <div class="nsItem">
-            <h3 class="nsTitleSm">WINTER NEW ARRIVALS</h3>
-            <h1 class="nsTitle">New Season</h1>
-            <h1 class="nsTitle">New Collection</h1>
+            <!-- <h3 class="nsTitleSm">SHARTHAK RAI</h3> -->
+            <h1 class="nsTitle">SHARTHAK RAI</h1>
+            <h1 class="nsTitle">WEB DEVELOPER</h1>
             <a href="#nav">
-                <button class="nsButton">CHOOSE YOUR STYLE</button>
+                <button class="nsButton">Portfolio</button>
             </a>
         </div>
         <div class="nsItem">
-            <img src="https://images.pexels.com/photos/7856965/pexels-photo-7856965.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+            <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
                 alt="" class="nsImg">
         </div>
     </div>
