--- a/index.html
+++ b/index.html
@@ -110,18 +110,18 @@
 
     <div class="gallery">
         <div class="galleryItem">
-            <h1 class="galleryTitle">Technology!</h1>
+            <h1 class="galleryTitle">Portable</h1>
             <img src="https://images.unsplash.com/photo-1585427795543-33cf23ea2853?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80ech"
                 alt="" class="galleryImg">
         </div>
         <div class="galleryItem">
-            <img src="https://images.unsplash.com/photo-1531297484001-80022131f5a1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1420&q=80"
+            <img src="https://images.unsplash.com/photo-1627664220128-ff2232937726?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
                 alt="" class="galleryImg">
-            <h1 class="galleryTitle">Disruptive</h1>
+            <h1 class="galleryTitle">Flexible</h1>
         </div>
         <div class="galleryItem">
-            <h1 class="galleryTitle">Cutting Edge</h1>
-            <img src="https://images.unsplash.com/photo-1632633726419-3e5e7d74ca61?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+            <h1 class="galleryTitle">Mobile</h1>
+            <img src="https://images.unsplash.com/photo-1564049489314-60d154ff107d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1483&q=80"
                 alt="" class="galleryImg">
         </div>
     </div>
