--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <h1 class="nsTitle">SHARTHAK RAI</h1>
             <h1 class="nsTitle">WEB DEVELOPER</h1>
             <a href="#nav">
-                <button href="https://sharthakrai.github.io/SharthakRai/" class="nsButton">Portfolio</button>
+                <button href="https://sharthakrai.github.io/SharthakRai/" class="nsButton">Portable Console</button>
             </a>
         </div>
         <div class="nsItem">
