--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="slider">
         <div class="sliderWrapper">
             <div class="sliderItem">
-                <img src="./img/air.png" alt="" class="sliderImg">
+                <img src="./img/switch.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">NINTENDO</br>SWITCH</h1>
                 <h2 class="sliderPrice">£300</h2>
@@ -47,7 +47,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="./img/jordan.png" alt="" class="sliderImg">
+                <img src="./img/razer.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">RAZER KISHI</br> IOS</h1>
                 <h2 class="sliderPrice">£89</h2>
@@ -56,7 +56,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="./img/blazer.png" alt="" class="sliderImg">
+                <img src="./img/backbone.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">BACKBONE</br> IOS</h1>
                 <h2 class="sliderPrice">£99</h2>
@@ -65,7 +65,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="./img/crater.png" alt="" class="sliderImg">
+                <img src="./img/steamdeck.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">STEAM DECK</br> 250GB</h1>
                 <h2 class="sliderPrice">£400</h2>
@@ -74,7 +74,7 @@
                 </a>
             </div>
             <div class="sliderItem">
-                <img src="./img/hippie.png" alt="" class="sliderImg">
+                <img src="./img/psvita.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">PS VITA</br></h1>
                 <h2 class="sliderPrice">£120</h2>
@@ -125,15 +125,18 @@
                 alt="" class="galleryImg">
         </div>
     </div>
-    <div class="newSeason">
+
+
+    <!-- Profile info unecessary -->
+    <!-- <div class="newSeason">
         <div class="nsItem">
             <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
                 alt="" class="nsImg">
         </div>
         <div class="nsItem">
-            <!-- <h3 class="nsTitleSm">SHARTHAK RAI</h3> -->
+    
             <h1 class="nsTitle">SHARTHAK RAI</h1>
-            <h1 class="nsTitle">WEB DEVELOPER</h1>
+            <h1 class="nsTitle">FRONTEND DEVELOPER</h1>
             <a href="#nav">
                 <button href="https://sharthakrai.github.io/SharthakRai/" class="nsButton">Portable Console</button>
             </a>
@@ -141,7 +144,7 @@
         <div class="nsItem">
             <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
                 alt="" class="nsImg">
-        </div>
+        </div> -->
     </div>
     <footer>
         <div class="footerLeft">
