--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     <nav id="nav">
         <div class="navTop">
             <div class="navItem">
-                <span class="limitedOffer">PORTABLE CONSOLE</span>
+                <span class="title">PORTABLE CONSOLE</span>
             </div>
             <div class="navItem">
                 <div class="search">
-                    <input type="text" placeholder="Search..." class="searchInput">
+                    <input type="text" placeholder="Search..." class="searchInput"> 
                     <img src="./img/search.png" width="20" height="20" alt="" class="searchIcon">
                 </div>
             </div>
             <div class="navItem">
-                <span class="limitedOffer">Sharthak Rai</span>
+                <span class="title">Sharthak Rai</span>
             </div>
         </div>
         <div class="navBottom">
-            <h3 class="menuItem">NINTENDO SWITCH</h3>
+            <h3 class="menuItem">NINTENDO SWITCH</h3> 
             <h3 class="menuItem">RAZER KISHI</h3>
             <h3 class="menuItem">BACKBONE</h3>
             <h3 class="menuItem">STEAM DECK</h3>
@@ -36,14 +36,14 @@
         </div>
     </nav>
     <div class="slider">
-        <div class="sliderWrapper">
+        <div class="sliderWrapper"> <!-- Slider Wrapper used for horizontal products display -->
             <div class="sliderItem">
-                <img src="./img/switch.png" alt="" class="sliderImg">
-                <div class="sliderBg"></div>
-                <h1 class="sliderTitle">NINTENDO</br>SWITCH</h1>
-                <h2 class="sliderPrice">£300</h2>
-                <a href="#product">
-                    <button class="buyButton">BUY NOW!</button>
+                <img src="./img/switch.png" alt="" class="sliderImg">  <!-- product image with slider class -->
+                <div class="sliderBg"></div> <!-- circle background behind product -->
+                <h1 class="sliderTitle">NINTENDO</br>SWITCH</h1> <!-- product name -->
+                <h2 class="sliderPrice">£300</h2> <!-- product price -->
+                <a href="#product"> <!-- link to product page -->
+                    <button class="buyButton">BUY NOW!</button> <!-- buy button -->
                 </a>
             </div>
             <div class="sliderItem">
@@ -126,32 +126,13 @@
         </div>
     </div>
 
-
-    <!-- Profile info unecessary -->
-    <!-- <div class="newSeason">
-        <div class="nsItem">
-            <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
-                alt="" class="nsImg">
-        </div>
-        <div class="nsItem">
     
-            <h1 class="nsTitle">SHARTHAK RAI</h1>
-            <h1 class="nsTitle">FRONTEND DEVELOPER</h1>
-            <a href="#nav">
-                <button href="https://sharthakrai.github.io/SharthakRai/" class="nsButton">Portable Console</button>
-            </a>
-        </div>
-        <div class="nsItem">
-            <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
-                alt="" class="nsImg">
-        </div> -->
-    </div>
     <footer>
         <div class="footerLeft">
             <div class="footerMenu">
-                <h1 class="fMenuTitle">About Us</h1>
+                <h1 class="fMenuTitle">About Us</h1> <!-- footer menu title -->
                 <ul class="fList">
-                    <li class="fListItem">Company</li>
+                    <li class="fListItem">Company</li>  <!-- footer menu list item -->
                     <li class="fListItem">Contact</li>
                     <li class="fListItem">Careers</li>
                     <li class="fListItem">Affiliates</li>
@@ -161,7 +142,7 @@
             <div class="footerMenu">
                 <h1 class="fMenuTitle">Useful Links</h1>
                 <ul class="fList">
-                    <li class="fListItem">Support</li>
+                    <li class="fListItem">Support</li> 
                     <li class="fListItem">Refund</li>
                     <li class="fListItem">FAQ</li>
                     <li class="fListItem">Feedback</li>
@@ -181,7 +162,7 @@
         </div>
         <div class="footerRight">
             <div class="footerRightMenu">
-                <h1 class="fMenuTitle">Subscribe to our newsletter</h1>
+                <h1 class="fMenuTitle">Subscribe to our newsletter</h1> 
                 <div class="fMail">
                     <input type="text" placeholder="your@email.com" class="fInput">
                     <button class="fButton">Join!</button>
@@ -189,8 +170,8 @@
             </div>
             <div class="footerRightMenu">
                 <h1 class="fMenuTitle">Follow Us</h1>
-                <div class="fIcons">
-                    <img src="./img/facebook.png" alt="" class="fIcon">
+                <div class="fIcons"> 
+                    <img src="./img/facebook.png" alt="" class="fIcon"> 
                     <img src="./img/twitter.png" alt="" class="fIcon">
                     <img src="./img/instagram.png" alt="" class="fIcon">
                     <img src="./img/whatsapp.png" alt="" class="fIcon">
