--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
             <div class="navItem">
                 <span class="title">PORTABLE CONSOLE</span>
             </div>
-            <div class="navItem">
+            <!-- <div class="navItem">
                 <div class="search">
                     <input type="text" placeholder="Search..." class="searchInput"> 
                     <img src="./img/search.png" width="20" height="20" alt="" class="searchIcon">
                 </div>
-            </div>
+            </div> -->
             <div class="navItem">
                 <span class="title">Sharthak Rai</span>
             </div>
         </div>
         <div class="navBottom">
-            <h3 class="menuItem">NINTENDO SWITCH</h3> 
+            <h3 class="menuItem">SWITCH</h3> 
             <h3 class="menuItem">RAZER KISHI</h3>
             <h3 class="menuItem">BACKBONE</h3>
             <h3 class="menuItem">STEAM DECK</h3>
@@ -42,7 +42,8 @@
                 <div class="sliderBg"></div> <!-- circle background behind product -->
                 <h1 class="sliderTitle">NINTENDO</br>SWITCH</h1> <!-- product name -->
                 <h2 class="sliderPrice">£300</h2> <!-- product price -->
-                <a href="#product"> <!-- link to product page -->
+
+                <a href="#product"> 
                     <button class="buyButton">BUY NOW!</button> <!-- buy button -->
                 </a>
             </div>
