--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div> -->
             <div class="navItem">
-                <span class="title">Sharthak Rai</span>
+                <span a href="https://sharthakrai.github.io/SharthakRai/"  class="creator" >SHARTHAK RAI</a></span>
             </div>
         </div>
         <div class="navBottom">
