--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         </div>
     </div>
    
+    <!-- icons and concise info to persuade customers -->
     <div class="features">
         <div class="feature">
             <img src="./img/shipping.png" alt="" class="featureIcon">
@@ -109,6 +110,7 @@
         </div>
     </div>
 
+    <!-- Payment section (DEMO) -->
     <div class="payment">
         <h1 class="payTitle">Personal Information</h1>
         <label>Name and Surname</label>
@@ -132,6 +134,7 @@
         <span class="close">X</span>
     </div>
 
+    <!-- Photos to inspire customers to purchase handheld consoles -->
     <div class="gallery">
         <div class="galleryItem">
             <h1 class="galleryTitle">Portable</h1>
