--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div> -->
             <div class="navItem">
-                <span a href="https://sharthakrai.github.io/SharthakRai/"  class="creator" >SHARTHAK RAI</a></span>
+                <span a href="https://sharthakrai.github.io/SharthakRai/"  class="creator" ></a></span>
             </div>
         </div>
         <div class="navBottom">
@@ -44,7 +44,7 @@
                 <h2 class="sliderPrice">£300</h2> <!-- product price -->
 
                 <a href="#product"> 
-                    <button class="buyButton">BUY NOW!</button> <!-- buy button -->
+                    <button class="buyButton">BUY</button> <!-- buy button -->
                 </a>
             </div>
             <div class="sliderItem">
@@ -53,7 +53,7 @@
                 <h1 class="sliderTitle">RAZER KISHI</br> IOS</h1>
                 <h2 class="sliderPrice">£89</h2>
                 <a href="#product">
-                    <button class="buyButton">BUY NOW!</button>
+                    <button class="buyButton">BUY</button>
                 </a>
             </div>
             <div class="sliderItem">
@@ -62,7 +62,7 @@
                 <h1 class="sliderTitle">BACKBONE</br> IOS</h1>
                 <h2 class="sliderPrice">£99</h2>
                 <a href="#product">
-                    <button class="buyButton">BUY NOW!</button>
+                    <button class="buyButton">BUY</button>
                 </a>
             </div>
             <div class="sliderItem">
@@ -71,7 +71,7 @@
                 <h1 class="sliderTitle">STEAM DECK</br> 250GB</h1>
                 <h2 class="sliderPrice">£400</h2>
                 <a href="#product">
-                    <button class="buyButton">BUY NOW!</button>
+                    <button class="buyButton">BUY</button>
                 </a>
             </div>
             <div class="sliderItem">
@@ -80,7 +80,7 @@
                 <h1 class="sliderTitle">PS VITA</br></h1>
                 <h2 class="sliderPrice">£120</h2>
                 <a href="#product">
-                    <button class="buyButton">BUY NOW!</button>
+                    <button class="buyButton">BUY</button>
                 </a>
             </div>
         </div>
